test_case/rust-lang_rust/51463_396017575_9.rs
\n\nFor more information about casts, take a look at The Book:\nhttps://doc.rust-lang.org/book/first-edition/casting-between-types.html\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/mismatched_typen":[],"rendered":"error[E0606]: casting `char` as `*const u8` is invalid\n  --> /checkout/src/test/ui/mismatched_types/cast-rfc0401.rs:59:13\n   |\nLL |     let _ = 'a' as *const u8; //~ ERROR is invalid\n   |             ^^^^^^^^^^^^^^^^\n\n"}
[00:46:20] {"message":"casting `usize` as `*const [u8]` is invalid","code":{"code":"E0606","explanation":"\nAn incompatible cast was attempted.\n\nErroneous code example:\n\n